# LinkScribe

./: LinkScribe.code-workspace  README.md  docker-compose.yaml  packages.txt
Backend/: .dockerignore  Dockerfile  model.py  requirements.txt  script.sh  webScrap.py
Frontend/: Dockerfile  home.py  packages.txt  pyproject.toml  script.sh
Model/: Ml-DLmodel.ipynb  pyproject.toml
