[tool.poetry]
name = "lscribe frontend"
version = "0.0.1"
description = "Frontend made with streamlit for LS project"
authors = ["jdmunoz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.1"
watchdog = "^4.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
