[tool.poetry]
name = "lscribe frontend"
version = "0.0.1"
description = "Frontend made with streamlit for LS project"
authors = ["jdmunoz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.1"
watchdog = "^4.0.0"
requests = "^2.31.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
numpy = "^1.26.4"
scikit-learn = "^1.3.0"
bs4 = "^0.0.2"
imgkit = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
